<resources>
    <string name="app_name">LUStationery</string>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="start_cam">Starting Camera.....</string>
    <string name="searchHintCat">Search Category...</string>
    <string name="searchHintItem">Search the Item...</string>
    <string name="close_scanner">Stop Scan</string>
    <string name="scan_hearder_text">Scan Item</string>
    <string name="rescanBtn">Scan Again</string>
    <string name="itemNumber">Item ID</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="camera_error">Camera initialization error: %s</string>
    <string name="external_dir">GetSignature</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="username"> Employee ID</string>
    <string name="password"> Password</string>
    <string name="error_login_failed">Invalid user id and password</string>
    <string name="error_field_required">This field is required</string>
    <string name="add_new_item">  ADD NEW ITEM</string>
    <string name="error_connection_failed">No connection found</string>
    <string name="adjVouchers">ADJUSTMENT VOUCHERS</string>
    <string name="genadjVoucher">GENERATE ADJUSTMENT VOUCHER</string>
    
<!-- TODO: Remove or change this placeholder text -->
    <string name="Google_ServerAPI">AIzaSyCGH2xSvM0u03YYNUYCLRPlURYGBYvR9jU</string>
    <string name="Google_SenderID">257044323523</string>
    <string name="Google_MapAPI">AIzaSyDNmdhHRizPlbclcrLuu4-uRbZzG_rfO8k</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
