<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team5.ad.sa40.stationeryinventory.Fragment.ReportItemListFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/add_new_item"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentStart="true"
        android:padding="10dp"
        android:textSize="16dp"
        android:textColor="@android:color/white"
        android:background="@color/SecondaryColor"
        android:text="@string/add_new_item"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/ic_m_add_white_24dp"/>


    <Button
        android:id="@+id/adjVouchers"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="5dp"
        android:padding="10dp"
        android:textSize="16dp"
        android:textColor="@android:color/white"
        android:background="@color/SecondaryColor"
        android:layout_alignParentEnd="true"
        android:text="@string/adjVouchers"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/ic_folder_open_white_24dp"/>

    <View style="@style/Divider"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_height="1dp"
        android:layout_below="@id/add_new_item"
        android:background="@color/background_floating_material_dark"
        android:id="@+id/view10" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/report_recycler_view"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/add_new_item"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/genAdjVoucher" />

    <Button
        android:id="@+id/genAdjVoucher"
        android:padding="10dp"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:background="@color/PrimaryColor"
        android:layout_alignParentBottom="true"
        android:text="@string/genadjVoucher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Item Code                                                      Qty       Reason"
        android:id="@+id/textView17"
        android:layout_alignTop="@+id/view10"
        android:layout_toEndOf="@+id/add_new_item"
        android:textStyle="bold"
        android:layout_alignParentStart="true" />


</RelativeLayout>
